fixed footer font

--- a/events.html
+++ b/events.html
@@ -17,7 +17,9 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
     <title>Events</title>
 
 
@@ -646,8 +648,8 @@
                     <div class="row">
                         <!-- Grid column -->
                         <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-                            <h6 class="mb-4">
-                                <i class="fas fa-gem me-3"></i><b>Elan &amp; &#951;vision</b>
+                            <h6 class="mb-4"  >
+                                <i class="fas fa-gem me-3" ></i><b style="font-family: 'Montserrat';">Elan &amp; &#951;vision</b>
                             </h6>
                             <img width="200px" height="200px" data-aos="fade-up" data-aos-once="true"
                                 src="images/elannvision.png">
@@ -657,35 +659,35 @@
                         <hr class="w-100 clearfix d-md-none" />
 
                         <!-- Grid column -->
-                        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 usefullinks">
-                            <h6 class="text-uppercase mb-4 font-weight-bold"><b>Useful Links</b></h6>
+                        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 usefullinks" style="font-family: 'Montserrat';">
+                            <h6 class="text-uppercase mb-4 font-weight-bold" ><b style="font-family: 'Montserrat';">Useful Links</b></h6>
                             <p data-aos="fade-up" data-aos-once="true">
                                 <a class="text-white" href="https://iith.ac.in/" target="_blank"
-                                    style="text-decoration: none;">IITH Website</a>
+                                    style="text-decoration: none;  font-family: 'Montserrat';">IITH Website</a>
                             </p>
                             <p data-aos="fade-up" data-aos-once="true">
                                 <a class="text-white" href="https://gymkhana.iith.ac.in/" target="_blank"
-                                    style="text-decoration: none;">Gymkhana IITH</a>
+                                    style="text-decoration: none; font-family: 'Montserrat',sans-serif;">Gymkhana IITH</a>
                             </p>
                         </div>
 
                         <!-- Grid column -->
                         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3" style="text-align: left;">
-                            <h6 class="text-uppercase mb-4 font-weight-bold"><b>Contact us</b></h6>
-                            <p data-aos="fade-up" data-aos-once="true"><i class="fas fa-home mr-3"></i> Elan &amp;
+                            <h6 class="text-uppercase mb-4 font-weight-bold" style="font-family: montserrat;"><b style="font-family: 'Montserrat';">Contact us</b></h6>
+                            <p data-aos="fade-up" data-aos-once="true"  style="font-family: 'Montserrat';"><i class="fas fa-home mr-3"></i> Elan &amp;
                                 &#951;vision Web Team</p>
-                            <p data-aos="fade-up" data-aos-once="true"><i
+                            <p data-aos="fade-up" data-aos-once="true"  style="font-family: 'Montserrat';"><i
                                     class="fas fa-envelope mr-3 me-2"></i>elan@iith.ac.in</p>
-                            <p data-aos="fade-up" data-aos-once="true"><i class="fas fa-phone mr-3"></i> +91 7995204145
+                            <p data-aos="fade-up" data-aos-once="true"  style="font-family: 'Montserrat';"><i class="fas fa-phone mr-3"></i> +91 7995204145
                             </p>
-                            <p data-aos="fade-up" data-aos-once="true"><i class="fas fa-phone mr-3"></i> +91 93261 68076
+                            <p data-aos="fade-up" data-aos-once="true"  style="font-family: 'Montserrat';"><i class="fas fa-phone mr-3"></i> +91 93261 68076
                             </p>
                         </div>
                         <!-- Grid column -->
 
                         <!-- Grid column -->
                         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-                            <h6 class="text-uppercase mb-4 font-weight-bold"><b>Follow us</b></h6>
+                            <h6 class="text-uppercase mb-4 font-weight-bold" style="font-family: 'Montserrat';"><b style="font-family: 'Montserrat';">Follow us</b></h6>
 
                             <!-- Facebook -->
                             <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998"
@@ -720,7 +722,7 @@
             <!-- Grid container -->
 
             <!-- Copyright -->
-            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2) ;font-family: montserrat;">
                 © 2021 Copyright: Elan and &#951;vision Web team
                 <!-- Copyright -->
         </footer>
