Added changes in footer

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
             bottom: 0;
             left: 0;
             right: 0;
-            height: 350px;
+            height: 300px;
             width: 350px;
         }
 
         #preloader img {
             height: 300px;
-            width: 300px;
+            width: 350px;
         }
 
         #loaded {
@@ -88,12 +88,12 @@
                 <div class="menu" style="background: linear-gradient(to right,#2E3192 ,#1BFFFF);">
                   <div>
                     <div>
-                      <ul>
-                        <li class="hovertochange"><a href="#">Home</a></li>
-                        <li class="hovertochange"><a href="#">Events</a></li>
-                        <li class="hovertochange"><a href="#">Sponsors</a></li>
-                        <li class="hovertochange"><a href="#">Teams and Domains</a></li>
-                      </ul>
+                        <ul>
+                            <li class="hovertochange"><a href="#" style="color:orange;font-family: Montserrat;">Home</a></li>
+                            <li class="hovertochange" style="font-family: 'Montserrat';"><a href="events.html" style="color:orange;font-family: Montserrat;">Events</a></li>
+                            <li class="hovertochange" style="font-family: 'Montserrat';"><a href="sponsors.html" style="color:orange;font-family: Montserrat;">Sponsors</a></li>
+                            <li class="hovertochange"><a href="#" style="color:orange;font-family: Montserrat;" >Teams and Domains</a></li>
+                          </ul>
                     </div>
                   </div>
                 </div>
@@ -103,7 +103,7 @@
             </div>
             <div class="left" data-aos="fade-up">
                 <h1>Elan and &#951;vision</h1>
-                <div class="tagline">THE GREATEST TECHO-CULTURAL FIESTA<br>IN AP &amp; TELANGANA
+                <div class="tagline">THE GRANDEST TECHO-CULTURAL FIESTA<br>IN AP &amp; TELANGANA
                 </div>
             </div>
             <div class="nextview animatethis" id="nextview">
@@ -154,9 +154,9 @@
                         <h1 style="font-size: calc(35px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));">General Stats
                         </h1>
                         <div class="col relie" data-aos="fade-down" data-aos-once="true">13th Edition</div>
-                        <div class="col relie" data-aos="fade-down" data-aos-once="true">4 Days</div>
-                        <div class="col relie" data-aos="fade-down" data-aos-once="true">200+ Colleges</div>
                         <div class="col relie" data-aos="fade-down" data-aos-once="true">40+ Events</div>
+                        <div class="col relie" data-aos="fade-down" data-aos-once="true">250+ Colleges</div>
+                        <div class="col relie" data-aos="fade-down" data-aos-once="true">10k+ Audience</div>
                     </div>
                     <div class="break">
                         <hr>
@@ -167,7 +167,6 @@
                             Outreach</h1>
                         <div class="col relie" data-aos="fade-down" data-aos-once="true">Facebook: 42,000+likes</div>
                         <div class="col relie" data-aos="fade-down" data-aos-once="true">Instagram: 2300+Followers</div>
-                        <div class="col relie" data-aos="fade-down" data-aos-once="true">Website: 50lakh+ Clicks</div>
                         <div class="col relie" data-aos="fade-down" data-aos-once="true">Twitter: 1000+Followers</div>
                         <div class="col relie" data-aos="fade-down" data-aos-once="true">Youtube: 61,000+Views</div>
                     </div>
@@ -234,11 +233,11 @@
                         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 usefullinks">
                             <h6 class="text-uppercase mb-4 font-weight-bold"><b>Useful Links</b></h6>
                             <p data-aos="fade-up" data-aos-once="true">
-                                <a class="text-white" href="https://iith.ac.in/" target="_blank"
+                                <a class="text-white" href="https://iith.ac.in/" 
                                     style="text-decoration: none;">IITH Website</a>
                             </p>
                             <p data-aos="fade-up" data-aos-once="true">
-                                <a class="text-white" href="https://gymkhana.iith.ac.in/" target="_blank"
+                                <a class="text-white" href="https://gymkhana.iith.ac.in/" 
                                     style="text-decoration: none;">Gymkhana IITH</a>
                             </p>
                         </div>
@@ -263,27 +262,27 @@
 
                             <!-- Facebook -->
                             <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998"
-                                href="https://www.facebook.com/elan.iithyderabad" target="_blank" role="button"><i
+                                href="https://www.facebook.com/elan.iithyderabad"  role="button"><i
                                     class="fab fa-facebook-f"></i></a>
 
                             <!-- Twitter -->
                             <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee"
-                                href="https://twitter.com/elan_nvision" target="_blank" role="button"><i
+                                href="https://twitter.com/elan_nvision"  role="button"><i
                                     class="fab fa-twitter"></i></a>
 
                             <!-- Google -->
                             <a class="btn btn-primary btn-floating m-1" style="background-color: #dd4b39"
-                                href="https://www.youtube.com/user/ElanIITHyderabad" target="_blank" role="button"><i
+                                href="https://www.youtube.com/user/ElanIITHyderabad"  role="button"><i
                                     class="fab fa-youtube"></i></a>
 
                             <!-- Instagram -->
                             <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac"
-                                href="https://www.instagram.com/elan_nvision.iith/" target="_blank" role="button"><i
+                                href="https://www.instagram.com/elan_nvision.iith/"  role="button"><i
                                     class="fab fa-instagram"></i></a>
 
                             <!-- Linkedin -->
                             <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca"
-                                href="https://www.linkedin.com/company/elan-nvision-iith/" target="_blank"
+                                href="https://www.linkedin.com/company/elan-nvision-iith/" 
                                 role="button"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
