--- a/events.html
+++ b/events.html
@@ -114,7 +114,7 @@
                             </ol>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img class="d-block " src="images/events/carousel-2.jpg" alt="" height="400px" width="100%">
+                                    <img class="d-block " src="images/carousel-2.jpg" alt="" height="400px" width="100%">
                                     <div class="carousel-caption d-none d-md-block">
                                         <h5 class="animate__animated animate__backInLeft tracking-in-contract-bck">Kailash
                                             Kher
@@ -124,7 +124,7 @@
     
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block " src="images/events/carousel-1.jpg" alt="" height="400px" width="100%">
+                                    <img class="d-block " src="images/carousel-1.jpg" alt="" height="400px" width="100%">
                                     <div class="carousel-caption d-none d-md-block">
                                         <h5 class="animate__animated animate__backInLeft tracking-in-contract-bck">Shirley
                                             Setia
@@ -133,7 +133,7 @@
                                     </div>
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block " src="images/events/carousel-3.jpg" alt="" height="400px" width="100%">
+                                    <img class="d-block " src="images/carousel-3.jpg" alt="" height="400px" width="100%">
                                     <div class="carousel-caption d-none d-md-block">
                                         <h5 class="animate__animated animate__backInLeft tracking-in-contract-bck">Shirley
                                             Setia
@@ -142,7 +142,7 @@
                                     </div>
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block " src="images/events/carousel-4.jpg" alt="" height="400px" width="100%">
+                                    <img class="d-block " src="images/carousel-4.jpg" alt="" height="400px" width="100%">
                                     <div class="carousel-caption d-none d-md-block">
                                         <h5 class="animate__animated animate__backInLeft tracking-in-contract-bck">Darshan
                                             Raval
@@ -151,7 +151,7 @@
                                     </div>
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block " src="images/events/caeousel-5.jpg" alt="" height="400px" width="100%">
+                                    <img class="d-block " src="images/caeousel-5.jpg" alt="" height="400px" width="100%">
                                     <div class="carousel-caption d-none d-md-block">
                                         <h5 class="animate__animated animate__backInLeft tracking-in-contract-bck">Shirley
                                             Setia
@@ -175,7 +175,7 @@
             </div>
         </div>
         <div
-            style=" background-image: url('images/events/Events-back-2.JPG'); background-repeat: no-repeat;background-attachment: fixed;  background-size: 100% 100%; ">
+            style=" background-image: url('images/Events-back-2.JPG'); background-repeat: no-repeat;background-attachment: fixed;  background-size: 100% 100%; ">
     
             <div class="container py-3" style="margin-left:0px">
                 <!-- Card Start -->
@@ -212,13 +212,13 @@
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img class="d-block " src="images/events/infi-1.JPG" alt="" height="400px" width="500px">
+                                        <img class="d-block " src="images/infi-1.JPG" alt="" height="400px" width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block " src="images/events/infi-2.webp" alt="" height="400px" width="500px">
+                                        <img class="d-block " src="images/infi-2.webp" alt="" height="400px" width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block " src="images/events/infi-3.JPG" alt="" height="400px" width="500px">
+                                        <img class="d-block " src="images/infi-3.JPG" alt="" height="400px" width="500px">
                                     </div>
                                     <a class="carousel-control-prev" href="#CarouselTest" role="button" data-slide="prev">
                                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -269,13 +269,13 @@
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img class="d-block " src="images/events/litr-1.jpeg" alt="" height="400px" width="500px">
+                                        <img class="d-block " src="images/litr-1.jpeg" alt="" height="400px" width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block " src="images/events/litr-2.png" alt="" height="400px" width="500px">
+                                        <img class="d-block " src="images/litr-2.png" alt="" height="400px" width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block " src="images/events/litr-3.png" alt="" height="400px" width="500px">
+                                        <img class="d-block " src="images/litr-3.png" alt="" height="400px" width="500px">
                                     </div>
                                     <a class="carousel-control-prev" href="#CarouselTest-1" role="button" data-slide="prev">
                                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -325,15 +325,15 @@
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img class="d-block" src="images/events/social cause-1.jpg" alt="" height="400px"
+                                        <img class="d-block" src="images/social cause-1.jpg" alt="" height="400px"
                                             width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block" src="images/events/social cause-2.jpg" alt="" height="400px"
+                                        <img class="d-block" src="images/social cause-2.jpg" alt="" height="400px"
                                             width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block" src="images/events/social cause-3.png" alt="" height="400px"
+                                        <img class="d-block" src="images/social cause-3.png" alt="" height="400px"
                                             width="500px">
                                     </div>
                                     <a class="carousel-control-prev" href="#CarouselTest-2" role="button" data-slide="prev">
@@ -383,15 +383,15 @@
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img class="d-block" src="images/events/sangarsh-1.jpg" alt="" height="400px"
+                                        <img class="d-block" src="images/sangarsh-1.jpg" alt="" height="400px"
                                             width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block" src="images/events/sangarsh-2.jpg" alt="" height="400px"
+                                        <img class="d-block" src="images/sangarsh-2.jpg" alt="" height="400px"
                                             width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block" src="images/events/sangarsh-3.jpg" alt="" height="400px"
+                                        <img class="d-block" src="images/sangarsh-3.jpg" alt="" height="400px"
                                             width="500px">
                                     </div>
                                     <a class="carousel-control-prev" href="#CarouselTest-3" role="button" data-slide="prev">
@@ -438,15 +438,15 @@
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img class="d-block" src="images/events/pronites-1.jpg" alt="" height="400px"
+                                        <img class="d-block" src="images/pronites-1.jpg" alt="" height="400px"
                                             width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block" src="images/events/pronites-2.png" alt="" height="400px"
+                                        <img class="d-block" src="images/pronites-2.png" alt="" height="400px"
                                             width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block" src="images/events/pronites-3.JPG" alt="" height="400px"
+                                        <img class="d-block" src="images/pronites-3.JPG" alt="" height="400px"
                                             width="500px">
                                     </div>
                                     <a class="carousel-control-prev" href="#CarouselTest-4" role="button" data-slide="prev">
@@ -497,15 +497,15 @@
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img class="d-block" src="images/events/workshop-1.jfif" alt="" height="400px"
+                                        <img class="d-block" src="images/workshop-1.jfif" alt="" height="400px"
                                             width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block" src="images/events/workshop-2.jpg" alt="" height="400px"
+                                        <img class="d-block" src="images/workshop-2.jpg" alt="" height="400px"
                                             width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block" src="images/events/workshop-3.jpg" alt="" height="400px"
+                                        <img class="d-block" src="images/workshop-3.jpg" alt="" height="400px"
                                             width="500px">
                                     </div>
                                     <a class="carousel-control-prev" href="#CarouselTest-5" role="button" data-slide="prev">
@@ -558,13 +558,13 @@
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img class="d-block" src="images/events/culti-1.JPG" alt="" height="400px" width="500px">
+                                        <img class="d-block" src="images/culti-1.JPG" alt="" height="400px" width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block" src="images/events/culti-2.JPG" alt="" height="400px" width="500px">
+                                        <img class="d-block" src="images/culti-2.JPG" alt="" height="400px" width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block" src="images/events/culti-3.JPG" alt="" height="400px" width="500px">
+                                        <img class="d-block" src="images/culti-3.JPG" alt="" height="400px" width="500px">
                                     </div>
                                     <a class="carousel-control-prev" href="#CarouselTest-6" role="button" data-slide="prev">
                                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -619,13 +619,13 @@
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img class="d-block" src="images/events/techy-1.JPG" alt="" height="400px" width="500px">
+                                        <img class="d-block" src="images/techy-1.JPG" alt="" height="400px" width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block" src="images/events/techy-2.JPG" alt="" height="400px" width="500px">
+                                        <img class="d-block" src="images/techy-2.JPG" alt="" height="400px" width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block" src="images/events/techy-3.JPG" alt="" height="400px" width="500px">
+                                        <img class="d-block" src="images/techy-3.JPG" alt="" height="400px" width="500px">
                                     </div>
                                     <a class="carousel-control-prev" href="#CarouselTest-7" role="button" data-slide="prev">
                                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
