--- a/events.html
+++ b/events.html
@@ -175,7 +175,7 @@
             </div>
         </div>
         <div
-            style=" background-image: url('images/Events-back-2.JPG'); background-repeat: no-repeat;background-attachment: fixed;  background-size: 100% 100%; ">
+            style=" background-image: url('images/events2.jpg'); background-repeat: no-repeat;background-attachment: fixed;  background-size: 100% 100%; ">
     
             <div class="container py-3" style="margin-left:0px">
                 <!-- Card Start -->
@@ -212,13 +212,13 @@
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img class="d-block " src="images/infi-1.JPG" alt="" height="400px" width="500px">
+                                        <img class="d-block " src="images/infi_1.jpg" alt="" height="400px" width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block " src="images/infi-2.webp" alt="" height="400px" width="500px">
+                                        <img class="d-block " src="images/infi_2.webp" alt="" height="400px" width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block " src="images/infi-3.JPG" alt="" height="400px" width="500px">
+                                        <img class="d-block " src="images/infi_3.jpg" alt="" height="400px" width="500px">
                                     </div>
                                     <a class="carousel-control-prev" href="#CarouselTest" role="button" data-slide="prev">
                                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -275,7 +275,7 @@
                                         <img class="d-block " src="images/litr-2.png" alt="" height="400px" width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block " src="images/litr-3.png" alt="" height="400px" width="500px">
+                                        <img class="d-block " src="images/litr_3.jpg" alt="" height="400px" width="500px">
                                     </div>
                                     <a class="carousel-control-prev" href="#CarouselTest-1" role="button" data-slide="prev">
                                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -446,7 +446,7 @@
                                             width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block" src="images/pronites-3.JPG" alt="" height="400px"
+                                        <img class="d-block" src="images/pronites_3.jpg" alt="" height="400px"
                                             width="500px">
                                     </div>
                                     <a class="carousel-control-prev" href="#CarouselTest-4" role="button" data-slide="prev">
@@ -558,13 +558,13 @@
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img class="d-block" src="images/culti-1.JPG" alt="" height="400px" width="500px">
+                                        <img class="d-block" src="images/culti_1.JPG" alt="" height="400px" width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block" src="images/culti-2.JPG" alt="" height="400px" width="500px">
+                                        <img class="d-block" src="images/culti_2.JPG" alt="" height="400px" width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block" src="images/culti-3.JPG" alt="" height="400px" width="500px">
+                                        <img class="d-block" src="images/culti_3.JPG" alt="" height="400px" width="500px">
                                     </div>
                                     <a class="carousel-control-prev" href="#CarouselTest-6" role="button" data-slide="prev">
                                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -619,13 +619,13 @@
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img class="d-block" src="images/techy-1.JPG" alt="" height="400px" width="500px">
+                                        <img class="d-block" src="images/techy_1.JPG" alt="" height="400px" width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block" src="images/techy-2.JPG" alt="" height="400px" width="500px">
+                                        <img class="d-block" src="images/techy_2.JPG" alt="" height="400px" width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block" src="images/techy-3.JPG" alt="" height="400px" width="500px">
+                                        <img class="d-block" src="images/techy_3.JPG" alt="" height="400px" width="500px">
                                     </div>
                                     <a class="carousel-control-prev" href="#CarouselTest-7" role="button" data-slide="prev">
                                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
