--- a/events.html
+++ b/events.html
@@ -558,13 +558,13 @@
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img class="d-block" src="images/culti_1.JPG" alt="" height="400px" width="500px">
+                                        <img class="d-block" src="images/culti_1.png" alt="" height="400px" width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block" src="images/culti_2.JPG" alt="" height="400px" width="500px">
+                                        <img class="d-block" src="images/culti_2.png" alt="" height="400px" width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block" src="images/culti_3.JPG" alt="" height="400px" width="500px">
+                                        <img class="d-block" src="images/culti_3.png" alt="" height="400px" width="500px">
                                     </div>
                                     <a class="carousel-control-prev" href="#CarouselTest-6" role="button" data-slide="prev">
                                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -619,13 +619,13 @@
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img class="d-block" src="images/techy_1.JPG" alt="" height="400px" width="500px">
+                                        <img class="d-block" src="images/techy_1.png" alt="" height="400px" width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block" src="images/techy_2.JPG" alt="" height="400px" width="500px">
+                                        <img class="d-block" src="images/techy_2.png" alt="" height="400px" width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block" src="images/techy_3.JPG" alt="" height="400px" width="500px">
+                                        <img class="d-block" src="images/techy_3.png" alt="" height="400px" width="500px">
                                     </div>
                                     <a class="carousel-control-prev" href="#CarouselTest-7" role="button" data-slide="prev">
                                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
