Added some changes

--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
                 pro-shows. It promises to be a grand event that exhibits the best of cultural performances, technical
                 solutions, and advances from the student community. Students hail from various institutes throughout the
                 country and take away bagful memories and experiences.
-                <img src="images/Fest.jpg" data-aos="fade-up">
+                <img src="images/Fest.jpg" style="border:5px solid white" data-aos="fade-up">
             </div>
             <h1 style="text-align: center;font-size: calc(60px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));"
                 data-aos="fade-up" data-aos-once="true">About Us</h1>
             <div class="about-text no-display" data-aos="fade-up" data-aos-once="true"
                 style="font-size: calc(11px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));">
-                <img src="images/about.jpg" data-aos="fade-up">
+                <img src="images/about.jpg" style="border:5px solid rgb(255, 255, 255)" data-aos="fade-up">
                 This fest is held in the campus of IIT Hyderabad and is completely organised by the students. Right
                 after the fest gets completed, preparations for the next year’s fest begin. Students of IITH amalgamate
                 into a team and put all their efforts into organising this fest. The whole organising team is divided
@@ -143,7 +143,7 @@
                 into a team and put all their efforts into organising this fest. The whole organising team is divided
                 into 19 domains. Each domain has its own motive and functionality. All the domains coordinate with each
                 other and host this fabulous fest.
-                <img src="images/about.jpg">
+                <img src="images/about.jpg" style="border:5px solid white">
 
             </div>
         </div>
