--- a/sponsors.html
+++ b/sponsors.html
@@ -163,13 +163,13 @@
       <div class="album py-5 ">
         <div class="container">
           
-            <div class="col-md-8 col-sm-12 my-5  ">
+            <div class="col-md-8 col-sm-12 my-5 mx-auto ">
               <div class="card-mb-4 shadow-sm  sponsors-img-1 myDIV">
                 <img class="img-fluid my-2" src="images/L&T.png" alt="">
               </div>
               <div class="hide my-1 ">Title Sponsor</div>
             </div>
-            <div class="col-md-8 col-sm-12 my-5 ">
+            <div class="col-md-8 col-sm-12 my-5 mx-auto ">
               <div class="card mb-4 shadow-sm sponsors-img-1 myDIV">
                 <img class="img-fluid" src="images/Arcesium.png" alt="">
               </div>
