--- a/events.html
+++ b/events.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
@@ -79,7 +79,7 @@
         <div class="main-container">
             <div class="header" id="header" style="background: none; height: auto; width: auto;">
                 <div class="logo" id="logo"
-                    style="position: sticky;top:0;width:100px;height: 100px;top: 2vh;margin-left: 2vw;">
+                    style="position: sticky;top:0;width:100px;height: 100px;top: 2vh;margin-left: 2vw;z-index: 10000000;">
                     <a href="#"><img width="100px" class="logohover" height="100px" src="images/logo.png"></a>
                 </div>
                 <div class="menu-wrap" id="menu-wrap">
@@ -586,14 +586,14 @@
                                     CULTI events promise you with nothing but entertainment and a mind-boggling
                                     experience.
                                 <h4>Art Attack </h4>
-                                <h4>Breakfree</h4>
+                                <!-- <h4>Breakfree</h4> -->
                                 <h4>Campus Idol</h4>
-                                <h4>Doodle Art</h4>
+                                <!-- <h4>Doodle Art</h4> -->
                                 <h4>Filmfare Fiesta</h4>
                                 <h4>Glitz & Glamour</h4>
                                 <h4>Nrityanjali</h4>
                                 <h4>Picelectric</h4>
-                                <h4>Standup</h4>
+                                <!-- <h4>Standup</h4> -->
                             </div>
                         </div>
                         <!-- Carousel start -->
@@ -649,16 +649,16 @@
                                     mobile
                                     platforms.
                                 <h4>CAD Pro</h4>
-                                <h4>Enigma</h4>
+                                <!-- <h4>Proquest</h4> -->
                                 <h4>Circuit Building</h4>
                                 <h4>Code Arduino</h4>
                                 <h4>Web Development</h4>
-                                <h4>Proquest</h4>
-                                <h4>Machina Doctrina’s</h4>
-                                <h4>DeepN</h4>
-                                <h4>Paper Presentation</h4>
-                                <h4>Hackathon</h4>
                                 <h4>SharkTank</h4>
+                                <h4>Machina Doctrina’s</h4>
+                                <!-- <h4>DeepN</h4> -->
+                                <h4>Hackathon</h4>
+                                <!-- <h4>Hackathon</h4> -->
+                                <!-- <h4>SharkTank</h4> -->
 
                             </div>
                         </div>
@@ -820,6 +820,22 @@
         AOS.init({
             duration: 2000
         });
+        let cl_1=document.getElementById('cl-1')
+        let cl_2=document.getElementById('cl-2')
+        let cl_3=document.getElementById('cl-3')
+        let cl_4=document.getElementById('cl-4')
+        let c1=document.getElementById('c1')
+        let c2=document.getElementById('c2')
+        let c3=document.getElementById('c3')
+        let c4=document.getElementById('c4')
+        c1.addEventListener("mouseover",()=>{cl_1.style.color="red"})
+        c1.addEventListener("mouseleave",()=>{cl_1.style.color="rgba(107, 201, 255, 0.116)"})
+        c2.addEventListener("mouseover",()=>{cl_2.style.color="red"})
+        c2.addEventListener("mouseleave",()=>{cl_2.style.color="rgba(107, 201, 255, 0.116)"})
+        c3.addEventListener("mouseover",()=>{cl_3.style.color="red"})
+        c3.addEventListener("mouseleave",()=>{cl_3.style.color="rgba(107, 201, 255, 0.116)"})
+        c4.addEventListener("mouseover",()=>{cl_4.style.color="red"})
+        c4.addEventListener("mouseleave",()=>{cl_4.style.color="rgba(107, 201, 255, 0.116)"})
     </script>
     <script src="js/lazyload.js"></script>
 </body>
