--- a/teamsanddomains.html
+++ b/teamsanddomains.html
@@ -11,7 +11,7 @@
         content="page,flip,pages,effect,flipbook,flipboard,jquery,html5,book,magazine,newspaper,ipad,iphone,android,ios" />
     <meta name="description" content="Turn.js makes a beautiful page turning effect using HTML5 and jQuery" />
     <link rel="icon" type="image/png" href="pics/favicon.png" />
-
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link type="text/css" rel="stylesheet" href="css/default.css">
     <link type="text/css" rel="stylesheet" href="css/all.min.css">
     </link>
@@ -81,7 +81,7 @@
           <div>
             <div>
                 <ul>
-                    <li class="hovertochange" style="margin-top: 10vh;" id="c1" data-text="Home"><span id="cl-1" class="commonwrong">&#10006;</span><a href="index.html" style="font-family: Montserrat;color: #1bfaad;">Home</a></li>
+                    <li class="hovertochange" style="margin-top:16vh;" id="c1" data-text="Home"><span id="cl-1" class="commonwrong">&#10006;</span><a href="index.html" style="font-family: Montserrat;color: #1bfaad;">Home</a></li>
                     <li class="hovertochange" id="c2" data-text="Events" ><span id="cl-2" class="commonwrong">&#10006;</span><a href="events.html" style="font-family: 'Montserrat';color: #1bfaad;">Events</a></li>
                     <li class="hovertochange" id="c3" data-text="Sponsors"><span id="cl-3" class="commonwrong">&#10006;</span><a href="sponsors.html"style="font-family: 'Montserrat';color: #1bfaad;">Sponsors</a></li>
                     <li class="hovertochange" id="c4" data-text="Teams and Domains"><span id="cl-4" class="commonwrong">&#10006;</span><a href="teamsanddomains.html" style="font-family: Montserrat;color: #1bfaad;" >Teams and Domains</a></li>
