--- a/index.html
+++ b/index.html
@@ -79,20 +79,20 @@
     <div id="loaded">
         <div class="header" id="header">
             <div class="logo" id="logo"
-                style="position: sticky;top:0;width:100px;height: 100px;top: 2vh;margin-left: 2vw;">
+                style="position: sticky;top:0;width:100px;height: 100px;top: 2vh;margin-left: 2vw;z-index: 1000000;">
                 <a href="#"><img width="100px" class="logohover" height="100px" src="images/logo.png"></a>
             </div>
-            <div class="menu-wrap" id="menu-wrap">
+            <div class="menu-wrap" id="menu-wrap" style="z-index: 10000;">
                 <input type="checkbox" class="toggler">
-                <div class="hamburger"><div></div></div>
-                <div class="menu" style="background: linear-gradient(to right,#2E3192 ,#1BFFFF);">
+                <div class="hamburger" ><div></div></div>
+                <div class="menu" style="background: linear-gradient(to right,#09203F ,#537895);" style="z-index: 10000;">
                   <div>
                     <div>
                         <ul>
-                            <li class="hovertochange"><a href="#" style="color:orange;font-family: Montserrat;">Home</a></li>
-                            <li class="hovertochange" style="font-family: 'Montserrat';"><a href="events.html" style="color:orange;font-family: Montserrat;">Events</a></li>
-                            <li class="hovertochange" style="font-family: 'Montserrat';"><a href="sponsors.html" style="color:orange;font-family: Montserrat;">Sponsors</a></li>
-                            <li class="hovertochange"><a href="#" style="color:orange;font-family: Montserrat;" >Teams and Domains</a></li>
+                            <li class="hovertochange" id="c1" data-text="Home"><span id="cl-1" class="commonwrong">&#10006;</span><a href="index.html" style="font-family: Montserrat;color: #1bfaad;">Home</a></li>
+                            <li class="hovertochange" id="c2" data-text="Events" ><span id="cl-2" class="commonwrong">&#10006;</span><a href="events.html" style="font-family: 'Montserrat';color: #1bfaad;">Events</a></li>
+                            <li class="hovertochange" id="c3" data-text="Sponsors"><span id="cl-3" class="commonwrong">&#10006;</span><a href="sponsors.html"style="font-family: 'Montserrat';color: #1bfaad;">Sponsors</a></li>
+                            <li class="hovertochange" id="c4" data-text="Teams and Domains"><span id="cl-4" class="commonwrong">&#10006;</span><a href="teamsanddomains.html" style="font-family: Montserrat;color: #1bfaad;" >Teams and Domains</a></li>
                           </ul>
                     </div>
                   </div>
@@ -312,6 +312,22 @@
                 duration: 1200
             }
         )
+        let cl_1=document.getElementById('cl-1')
+        let cl_2=document.getElementById('cl-2')
+        let cl_3=document.getElementById('cl-3')
+        let cl_4=document.getElementById('cl-4')
+        let c1=document.getElementById('c1')
+        let c2=document.getElementById('c2')
+        let c3=document.getElementById('c3')
+        let c4=document.getElementById('c4')
+        c1.addEventListener("mouseover",()=>{cl_1.style.color="red"})
+        c1.addEventListener("mouseleave",()=>{cl_1.style.color="rgba(107, 201, 255, 0.116)"})
+        c2.addEventListener("mouseover",()=>{cl_2.style.color="red"})
+        c2.addEventListener("mouseleave",()=>{cl_2.style.color="rgba(107, 201, 255, 0.116)"})
+        c3.addEventListener("mouseover",()=>{cl_3.style.color="red"})
+        c3.addEventListener("mouseleave",()=>{cl_3.style.color="rgba(107, 201, 255, 0.116)"})
+        c4.addEventListener("mouseover",()=>{cl_4.style.color="red"})
+        c4.addEventListener("mouseleave",()=>{cl_4.style.color="rgba(107, 201, 255, 0.116)"})
     </script>
     <!-- SwiperJs for including a customised slider -->
     <script src="js/swiper.js"></script>
