--- a/events.html
+++ b/events.html
@@ -210,7 +210,7 @@
                                     your time well as to get rid of that piling up stress. Infi promises to give
                                     memories
                                     for gangs of friends with a wide variety of fun-filled games.
-                                    <br>
+                                    <!-- <br> -->
                                     Events conducted by Informals last year (Elan 2021)
                                 <h4>Mr. & Ms. Elan 2021</h4>
                                 <h4>Meme Making Competition</h4>
@@ -233,7 +233,7 @@
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img class="d-block " src="images/infi_1.jpg" alt="" height="400px"
+                                        <img class="d-block " src="images/culti_3.png" alt="" height="400px"
                                             width="500px">
                                     </div>
                                     <div class="carousel-item">
@@ -281,7 +281,7 @@
                                     Events conducted by Litr last year (Elan 2021)
                                 <h4>Plot the Twist</h4>
                                 <h4>Two Line Terror</h4>
-                                <h4>My Heartthrob</h4>
+                                <!-- <h4>My Heartthrob</h4> -->
                                 <h4>Just Kidding</h4>
                                 <h4>Inked Verses</h4>
                             </div>
@@ -543,11 +543,11 @@
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img class="d-block" src="images/workshop-1.jfif" alt="" height="400px"
+                                        <img class="d-block" src="images/workshop-2.jpg" alt="" height="400px"
                                             width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block" src="images/workshop-2.jpg" alt="" height="400px"
+                                        <img class="d-block" src="images/workshop-3.jpg" alt="" height="400px"
                                             width="500px">
                                     </div>
                                     <!-- <div class="carousel-item">
