changes in footer-adding sponsors in footer

--- a/index.html
+++ b/index.html
@@ -232,14 +232,22 @@
 
                         <!-- Grid column -->
                         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 usefullinks">
-                            <h6 class="text-uppercase mb-4 font-weight-bold"><b>Useful Links</b></h6>
+                            <h6 class="text-uppercase mb-4 font-weight-bold"><b>Our Sponsors</b></h6>
                             <p data-aos="fade-up" data-aos-once="true">
-                                <a class="text-white" href="https://iith.ac.in/" 
-                                    style="text-decoration: none;">IITH Website</a>
+                                <a class="text-white" href="https://www.larsentoubro.com/" 
+                                    style="text-decoration: none;">Laursen &amp; Toubro</a>
                             </p>
                             <p data-aos="fade-up" data-aos-once="true">
-                                <a class="text-white" href="https://gymkhana.iith.ac.in/" 
-                                    style="text-decoration: none;">Gymkhana IITH</a>
+                                <a class="text-white" href="https://www.arcesium.com/" 
+                                    style="text-decoration: none;">Arcesium</a>
+                            </p>
+                            <p data-aos="fade-up" data-aos-once="true">
+                                <a class="text-white" href="https://sbi.co.in/" 
+                                    style="text-decoration: none;">State Bank of India</a>
+                            </p>
+                            <p data-aos="fade-up" data-aos-once="true">
+                                <a class="text-white" href="https://www.honeywell.com/us/en" 
+                                    style="text-decoration: none;">Honeywell</a>
                             </p>
                         </div>
 
