Added changes in footer in events.html

--- a/events.html
+++ b/events.html
@@ -657,19 +657,23 @@ style=" background-image: url('images/events2.jpg'); background-repeat: no-repea
                         <hr class="w-100 clearfix d-md-none" />
 
                         <!-- Grid column -->
-                        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 usefullinks"
-                            style="font-family: 'Montserrat';">
-                            <h6 class="text-uppercase mb-4 font-weight-bold"><b
-                                    style="font-family: 'Montserrat';">Useful
-                                    Links</b></h6>
+                        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 usefullinks" style="font-family: Montserrat;">
+                            <h6 class="text-uppercase mb-4 font-weight-bold"><b style="font-family: Montserrat;">Our Sponsors</b></h6>
                             <p data-aos="fade-up" data-aos-once="true">
-                                <a class="text-white" href="https://iith.ac.in/" target="_blank"
-                                    style="text-decoration: none;  font-family: 'Montserrat';">IITH Website</a>
+                                <a class="text-white" href="https://www.larsentoubro.com/" 
+                                    style="text-decoration: none;font-family: Montserrat;">Laursen &amp; Toubro</a>
                             </p>
                             <p data-aos="fade-up" data-aos-once="true">
-                                <a class="text-white" href="https://gymkhana.iith.ac.in/" target="_blank"
-                                    style="text-decoration: none; font-family: 'Montserrat',sans-serif;">Gymkhana
-                                    IITH</a>
+                                <a class="text-white" href="https://www.arcesium.com/" 
+                                    style="text-decoration: none;font-family: Montserrat;">Arcesium</a>
+                            </p>
+                            <p data-aos="fade-up" data-aos-once="true">
+                                <a class="text-white" href="https://sbi.co.in/" 
+                                    style="text-decoration: none;font-family: Montserrat;">State Bank of India</a>
+                            </p>
+                            <p data-aos="fade-up" data-aos-once="true">
+                                <a class="text-white" href="https://www.honeywell.com/us/en" 
+                                    style="text-decoration: none;font-family: Montserrat;">Honeywell</a>
                             </p>
                         </div>
 
